--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -157,7 +157,7 @@ h3.date {
     color: #FFFFFF;
     display: inline-block;
     font-weight: bold;
-    margin: 0 auto 1rem;
+    margin: 0.5rem auto 1rem;
     padding: 5px 6px;
     text-align: center;
     text-decoration: none;
@@ -167,20 +167,32 @@ h3.date {
     font-size: 0.8rem;
 }
 
-img.left{
+img.left {
     border: 2px solid #FFFFFF;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    margin: 0 1rem 0 0;
+    margin: 0 1rem 0.5rem 0;
     float:left;
 }
 
-img.logo{
+img.logo {
     margin-bottom: 20px;
     display: block;
 }
 
-p.abstract{
+p.abstract {
     margin: 0;
+}
+
+.message {
+    text-decoration: black;
+    font-weight: bold;
+}
+
+table {
+    border-collapse: collapse;
+}
+td, th {
+    border: 1px solid black;
 }
 
 /* -------------- @sidebar --------------------------------------------------- */
@@ -190,7 +202,7 @@ section#sidebar{
     padding: 1px 0;
     top: 182px; right: 0;
     position: fixed;
-    z-index:-1;
+    z-index:+1;
 }
 
 
